option(
  'with-system-libdir',
  type: 'string',
  value: '',
  description: 'Specify the system library directory (default {prefix}/{libdir})'
)

option(
  'with-system-includedir',
  type: 'string',
  value: '',
  description: 'Specify the system include directory (default {prefix}/{includedir})'
)

option(
  'fuzzing',
  type: 'boolean',
  value: false,
  description: 'Build libFuzzer targets'
)

option('analyzer',
  type : 'boolean',
  value : false,
  description : 'enable GCC static analysis (-fanalyzer) on project targets'
)
